; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_servo_control/main/extr_mcpwm_servo_control_example.c_servo_per_degree_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_servo_control/main/extr_mcpwm_servo_control_example.c_servo_per_degree_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SERVO_MIN_PULSEWIDTH = common dso_local global i32 0, align 4
@SERVO_MAX_PULSEWIDTH = common dso_local global i32 0, align 4
@SERVO_MAX_DEGREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @servo_per_degree_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @servo_per_degree_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @SERVO_MIN_PULSEWIDTH, align 4
  %5 = load i32, i32* @SERVO_MAX_PULSEWIDTH, align 4
  %6 = load i32, i32* @SERVO_MIN_PULSEWIDTH, align 4
  %7 = sub nsw i32 %5, %6
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 %7, %8
  %10 = load i32, i32* @SERVO_MAX_DEGREE, align 4
  %11 = sdiv i32 %9, %10
  %12 = add nsw i32 %4, %11
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
